# OpenSpeechPlatform

./: README.md
Binaries/: README.md
Sources/: README.md
Sources/embeddedwebserver/: .gitignore  README.md
Sources/embeddedwebserver/app/Console/: Kernel.php
Sources/embeddedwebserver/app/Http/: Kernel.php
Sources/embeddedwebserver/database/: homestead.sqlite
Sources/embeddedwebserver/database/migrations/: 2019_04_28_082229_create_goldilocks_generic_table.php  2021_03_05_171257_add_most_recent_to_goldilocks_listeners_table.php
Sources/embeddedwebserver/resources/views/: calibration.blade.php
Sources/embeddedwebserver/routes/: web.php
Sources/ewsnodejs-client/: README.md  package.json
Sources/ewsnodejs-client/src/components/: amplification.jsx  audioFilePlayer.jsx  sideBar.jsx
Sources/ewsnodejs-client/src/utils/: utils.jsx
Sources/ewsnodejs-server/: .gitignore  Readme.md  database.sqlite.dist  package.json
Sources/ewsnodejs-server/docs/db/: GETkeyval.md
Sources/ewsnodejs-server/scripts/: config.json  config10.json  config11.json  create_profile_db.py  marty10.json  marty6.json
Sources/ewsnodejs-server/src/controllers/: paramController.js  researcherController.js
Sources/ewsnodejs-server/src/utils/: utils.js
Sources/ewsnodejs-server/test/: test_keyval.py
Sources/libimu/: .gitignore  CMakeLists.txt  Makefile  README.md  gesture_detection.cpp  imu.cpp  imu160.cpp  imu270.cpp  log_imu.cpp  osp_socket.cpp
Sources/libimu/BMI160_driver/: .vscode-ctags  bmi160_defs.h  osp_bmi160.c  osp_bmi160.h
Sources/libimu/BMI160_driver/examples/read_sensor_data/: Makefile  read_sensor_data.c
Sources/libimu/BMI160_driver/examples/tap/: Makefile  tap.c
Sources/libimu/BMI270-Sensor-API/: .vscode-ctags  README.md  bmi2.c  bmi270.c  bmi270_maximum_fifo.c  bmi2_defs.h
Sources/libimu/BMI270-Sensor-API/examples/bmi270/accel/: Makefile  accel  accel.c
Sources/libimu/BMI270-Sensor-API/examples/bmi270/accel_gyro/: Makefile  accel_gyro.c
Sources/libimu/BMI270-Sensor-API/examples/bmi270/common/: common.c  common.h
Sources/libimu/BMI270-Sensor-API/examples/bmi270/fifo_full_header_mode/: Makefile  fifo_full_header_mode.c
Sources/libimu/BMI270-Sensor-API/examples/bmi270/gyro/: Makefile  gyro  gyro.c
Sources/libimu/BMI270-Sensor-API/examples/bmi270/step_counter/: Makefile  step_counter  step_counter.c
Sources/libimu/BMI270-Sensor-API/examples/bmi270/tap/: Makefile  tap.c
Sources/libimu/BMI270-Sensor-API/examples/bmi270_context/common/: common.c
Sources/libimu/BMI270-Sensor-API/examples/bmi270_maximum_fifo/accel_gyro/: Makefile  accel_gyro.c
Sources/libimu/archive/: CMakeLists  imu_logging.sh  libimu_new.cpp  libimu_new.h  log_imu_multithread.cpp  log_imu_singlethread.cpp  log_imu_tapdetection.cpp  record_data.sh  reference_imu_new.cpp
Sources/libimu/include/: gesture_detection.hpp  imu_sensor.hpp  osp_socket.hpp
Sources/libimu/scripts/: both_audio.sh  kill_logging.sh  log_all_imu.sh  log_data.sh
Sources/libosp/: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  setup.cfg  setup.py
Sources/libosp/OSP/: CMakeLists.txt
Sources/libosp/OSP/adaptive_filter/: adaptive_filter.cpp  adaptive_filter.hpp
Sources/libosp/OSP/afc/: afc.cpp  afc.hpp
Sources/libosp/OSP/array_utilities/: array_utilities.cpp  array_utilities.hpp
Sources/libosp/OSP/beamformer/: beamformer.cpp  beamformer.hpp
Sources/libosp/OSP/circular_buffer/: circular_buffer.cpp  circular_buffer.hpp
Sources/libosp/OSP/fileio/: AudioFile.h  async_write.cpp  file_record.cpp  file_record.h  playfile.cpp  playfile.h
Sources/libosp/OSP/filter/: filter.cpp  filter.hpp  fir_formii.cpp  fir_formii.h
Sources/libosp/OSP/freping/: freping.cpp  freping.hpp
Sources/libosp/OSP/multirate_filterbank/: sokolovaharris_filtercoef.h  tenband_filterbank.cpp  tenband_filterbank.h
Sources/libosp/OSP/resample/: hb_sample.cpp  polyphase_hb_downsampler.cpp  polyphase_hb_downsampler.h  polyphase_hb_upsampler.cpp  polyphase_hb_upsampler.h  resample.cpp  resample.hpp  resample_down.cpp  resample_down.h  resample_up.cpp  resample_up.h
Sources/libosp/OSP/subband/: noise_management.cpp  noise_management.hpp  peak_detect.cpp  peak_detect.hpp  wdrc.cpp  wdrc.hpp
Sources/libosp/docs/: all.md  arch.md  intro.md
Sources/libosp/fake/: osp_fake_server.py
Sources/libosp/python/: Fir_Filter.ipynb  Freping.ipynb  README.ipynb  README.md  elevenband_cpp_down_up.ipynb  elevenband_cpp_phase_align.ipynb  elevenband_test.ipynb  resample.ipynb  rtmha
Sources/libosp/python/osp/: Freping Feedback Monitor.ipynb  Freping-AFC.ipynb  OSP Control Tutorial.ipynb  README.ipynb  README.md  WDRC.ipynb  monitor-tcp.ipynb  monitor.ipynb  osp_control.py
Sources/libosp/python/test/: Fir_Filter-MakeTestData.ipynb  WDRC_test.ipynb  eleven_plot_matlab.ipynb  eleven_test_downsample.ipynb  eleven_test_upsample.ipynb  mlab.py  rtmha  wdrc_plot_c++-Copy1.ipynb  wdrc_plot_c++-mixed.ipynb  wdrc_plot_c++.ipynb
Sources/libosp/rtmha/: filter.pyx  freping.pyx  resample.pyx
Sources/libosp/src/: CMakeLists.txt  config.json  config10.json  latency_test.cpp  main.cpp
Sources/libosp/src/include/: config.hpp  config10.hpp  osp_defaults.hpp  osp_net.hpp  osp_params.hpp  osp_parser.hpp  osp_process.hpp  osp_process_params.hpp  osp_run.hpp
Sources/libosp/test/: CMakeLists.txt  adaptive_filter_test.cpp  afc_test.cpp  array_bench.cpp  array_test.cpp  beamformer_test.cpp  data_eleven800.mat  eleven_test_bands.mat  eleven_test_upsample.mat  elevenband_test.cpp  filter_test.cpp  fir_bench.cpp  fir_test.cpp  resample_bench.cpp  test_fir.py  test_wdrc11.py  upsample_test.cpp  wdrc_test_3_out.mat  wdrc_test_out.mat  wdrc_test_out_simple.mat
Sources/ospboard/: .clang-format  .gitignore  BUILDING.md  DEVELOPMENT.md  Dockerfile  README.md  WINDOWS.md  build_device  build_docker  build_kernel  build_osp  listings-setup.tex  make_dist  make_img  make_rootfs  mount_rootfs  ospboard_id  pcdtool  releases-osp.md  releases-rootfs.md  umount_rootfs  uncompress_rootfs
Sources/scripts/: checkout  install  run_mha  run_osp
(+874 files in other folders)
