[metadata]
name = rtmha
version = 0.0.1
description = RealTime Master Hearing Aid 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Martin Hunt
author_email = mmhunt@ucsd.edu
url = 
download_urls = 
project_urls =
	Documentation = 
	Code = 
	Issue tracker = 
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Medical Science Apps.
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
# package_dir = =rtmha
packages = find:

# [options.packages.find]
# where = rtmha

